--- a/final/abstract.tex
+++ b/final/abstract.tex
@@ -9,4 +9,4 @@ the edges represent the need to separate their endpoint FRs into separate parts.
 solution to a vertex coloring problem: finding the chromatic number of such a graph.  Unfortunately, the chromatic
 number problem is known to be NP-hard.  This research investigates a new algorithm that determines the chromatic
 number for a graph and compares the new algorithm's computer runtime performance to existing Zykov branch
-and bound algorithms via random graph analysis.  
+and bound algorithms using random graph analysis.
