Candidate final theory section

--- a/final/references.bib
+++ b/final/references.bib
@@ -80,6 +80,38 @@
   year={2001}
 }
 
+@article{mcdiarmid,
+  author={McDiarmid, Colin},
+  title={Determining the Chromatic Number of a Graph},
+  journal={SIAM Journal on Computing},
+  volume={8},
+  number={1},
+  month={02},
+  year={1979},
+  pages={1-14}
+}
+
+@article{christofides,
+  author={Christofides, Nicos},
+  title={An Algorithm for the Chromatic Number of a Graph},
+  journal={The Computer Journal},
+  volume = {14},
+  number = {1},
+  month = {January},
+  year = {1971},
+  pages = {38--39}
+}
+
+@book{zykov,
+  title={On Some Properties of Linear Complexes},
+  author={Zykov, Alexandre A.},
+  series={American Mathematical Society Translations Series One},
+  publisher={American Mathematical Society},
+  volume={7},
+  year={1949 (translated 1952)},
+  pages={418--449}
+}
+
 @article{hopcroft,
   author={Hopcroft, John and Tarjan, Robert},
   title={Algorithm 447: Efficient Algorithms for Graph Manipulation},
@@ -93,16 +125,6 @@
   pages={372--378}
 }
 
-@book{zykov,
-  title={On Some Properties of Linear Complexes},
-  author={Zykov, A.A. and American Mathematical Society},
-  series={American Mathematical Society Translations Series One},
-  publisher={American Mathematical Society},
-  volume={7},
-  year={1952},
-  pages={418--449} 
-}
-
 @article{corneil,
   author={Corneil, D.G. and Graham, B.},
   title={An Algorithm for Determining the Chromatic Number of a Graph},
@@ -112,17 +134,6 @@
   month={December},
   year={1973},
   pages={311--318}
-}
-
-@article{mcdiarmid,
-  author={McDiarmid, Colin},
-  title={Determining the Chromatic Number of a Graph},
-  journal={SIAM Journal on Computing},
-  volume={8},
-  number={1},
-  month={02},
-  year={1979},
-  pages={1-14}
 }
 
 @article{bron,
