Edits to theory section

--- a/final/references.bib
+++ b/final/references.bib
@@ -126,7 +126,7 @@
 }
 
 @article{corneil,
-  author={Corneil, D.G. and Graham, B.},
+  author={Corneil, Derek G. and Graham, Barry.},
   title={An Algorithm for Determining the Chromatic Number of a Graph},
   journal={SIAM Journal on Computing},
   volume={2},
