Working on complexity

--- a/final/references.bib
+++ b/final/references.bib
@@ -18,10 +18,10 @@
 @inproceedings{jahanbekam,
   author={Behdad, Sara and Gopalakrishnan, Praveen Kumare and Jahanbekam, Sogol and Klein, Helen},
   title={Graph Partitioning Technique to Identify Physically Integrated Design Concepts},
-  series={Proceedings of the ASME 2018 International Design Engineering Technical Conferences \& Computers and
+  booktitle={Proceedings of the ASME 2018 International Design Engineering Technical Conferences \& Computers and
   Information in Engineering Conference},
-  number={DETC2018-85646},
   series={IDETC/CIE 2018},
+  number={DETC2018-85646},
   address={Quebec, Canada},
   month={Aug 26--29},
   year={2018}
@@ -31,10 +31,10 @@
   author={Behdad, Sara and Cavallaro, Jeffery and Gopalakrishnan, Praveen Kumare and Jahanbekam, Sogol},
   title={A Graph Coloring Technique for Identifying the Minimum Number of Parts for Physical Integration in
   Product Design},
-  series={Proceedings of the ASME 2019 International Design Engineering Technical Conferences \& Computers and
+  booktitle={Proceedings of the ASME 2019 International Design Engineering Technical Conferences \& Computers and
   Information in Engineering Conference},
-  number={DETC2019-98251},
   series={IDETC/CIE 2019},
+  number={DETC2019-98251},
   address={Anaheim, CA},
   month={Aug 18--21},
   year={2019}
@@ -134,6 +134,40 @@
   month={December},
   year={1973},
   pages={311--318}
+}
+
+@book{dturing,
+  author={Turing, Dermot},
+  title={Prof: Alan Turing Decoded},
+  publisher={The History Press},
+  address={Stroud, Gloucestershire},
+  year={2015}
+}
+
+@article{aturing,
+  author={Turing, Alan M.},
+  title={On Computable Numbers, with an Application to the Entscheidungsproblem},
+  journal={Proceedings of the London Mathematical Society},
+  volume={42},
+  number={1},
+  year={1937},
+  pages={230--265}
+}
+  
+@book{bernhardt,
+  author={Bernhardt, Chris},
+  title={Turing's Vision: The Birth of Computer Science},
+  publisher={The MIT Press},
+  address={Cambridge, MA},
+  year={2016}
+}
+
+@book{garey,
+  author={Garey, Michael R. and Johnson, David S},
+  title={Computers and Intractability: A Guide to the Theory of NP-Completeness},
+  publisher={W.H. Freeman and Company},
+  address={San Francisco},
+  year={1979}
 }
 
 @article{bron,
